--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tinymce/tinymce-vue": "^2.0.0",
     "axios": "^0.18.0",
     "echarts": "^4.2.1",
     "element-ui": "^2.8.2",
+    "tinymce": "^5.0.5",
     "vue": "^2.6.6",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.2"
   },
   "devDependencies": {
